Edit Photos View

--- a/KTaseva.App/wwwroot/css/site.css
+++ b/KTaseva.App/wwwroot/css/site.css
@@ -1,7 +1,7 @@
 ﻿.masthead {
     height: 100vh;
     min-height: 500px;
-    background-image: url('https://res.cloudinary.com/ktaseva/image/upload/v1586102252/image_arqccl.jpg');
+    background-image: url('https://images.unsplash.com/photo-1586008100214-98e761bc7c64?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
