--- a/KTaseva.App/Views/Photos/Index.cshtml
+++ b/KTaseva.App/Views/Photos/Index.cshtml
@@ -8,11 +8,10 @@
     <div class="row">
         @foreach (var photo in Model)
         {
-            <div class="col-xl-3 col-md-6 mb-4">
-                <div class="card border-0 shadow">
-                    <img src="@photo.Url" class="card-img-top">
-                </div>
-            </div>
+            <figure class="figure">
+                <img src="@photo.Url" class="figure-img img-fluid rounded">
+            </figure>
+
         }
     </div>
 </div>
