--- a/KTaseva.App/Views/Home/Index.cshtml
+++ b/KTaseva.App/Views/Home/Index.cshtml
@@ -4,8 +4,8 @@
     <div class="container h-100">
         <div class="row h-100 align-items-center">
             <div class="col-12 text-center">
-                <h1 class="font-weight-light">Подари си миг красота, само за теб!</h1>
-                <p class="lead">И ръцете ти имат нужда от специална грижа, за да изглеждат перфектно!</p>
+                <h1 class="font-weight-light" style="text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px black; color: white;">Подари си миг красота, само за теб!</h1>
+                <p class="lead" style="text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px black; color: white;">И ръцете ти имат нужда от специална грижа, за да изглеждат перфектно!</p>
                 <a asp-area="" asp-controller="Appointments" asp-action="Add" class="btn btn-primary">Запази час</a>
 
             </div>
