--- a/KTaseva.App/Views/AboutMe/Index.cshtml
+++ b/KTaseva.App/Views/AboutMe/Index.cshtml
@@ -7,6 +7,11 @@
     <div class="container work-process  pb-5 pt-5">
         <div class="title mb-5 text-center">
             <h3>За <span class="site-color">мен</span></h3>
+            @if (this.User.IsInRole("Administrator"))
+            {
+                <a type="button" asp-area="" asp-controller="AboutMe" asp-action="Add" class="btn btn-primary btn-sm">Добави</a>
+                <a type="button" asp-area="" asp-controller="AboutMe" asp-action="Edit" class="btn btn-warning btn-sm">Редактирай</a>
+            }
         </div>
         <!-- ============ step 1 =========== -->
         <div class="row">
@@ -136,6 +141,4 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
-<script>
-    AOS.init();
-</script>
+<script>AOS.init();</script>
