Add AboutMeService, Add, Edit,

--- a/KTaseva.App/Views/AboutMe/Add.cshtml
+++ b/KTaseva.App/Views/AboutMe/Add.cshtml
@@ -1,8 +1,8 @@
 ﻿@model AboutMeInputModel
 
 <div class="container">
-    <h1 class="text-center">Редактиране</h1>
-    <form asp-area="" asp-controller="AboutMe" asp-action="Edit" method="post" class="form-horizontal">
+    <h1 class="text-center">Добавяне</h1>
+    <form asp-area="" asp-controller="AboutMe" asp-action="Add" method="post" class="form-horizontal">
         <div class="form-group">
             <label>Заглавие</label>
             <input type="text" class="form-control" asp-for="@Model.Title">
