--- a/KTaseva.App/Views/_ViewImports.cshtml
+++ b/KTaseva.App/Views/_ViewImports.cshtml
@@ -5,6 +5,7 @@
 @using KTaseva.ViewModels.Photos
 @using KTaseva.ViewModels.Appointments
 @using KTaseva.ViewModels.Procedures
+@using KTaseva.ViewModels.AboutMe
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
