--- a/KTaseva.App/Views/AboutMe/Index.cshtml
+++ b/KTaseva.App/Views/AboutMe/Index.cshtml
@@ -1,4 +1,7 @@
-﻿<link rel="stylesheet" href="~/css/test.css" />
+﻿@model IEnumerable<AboutMeViewModel>
+@{ int count = 0; }
+
+<link rel="stylesheet" href="~/css/test.css" />
 
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -10,130 +13,64 @@
             @if (this.User.IsInRole("Administrator"))
             {
                 <a type="button" asp-area="" asp-controller="AboutMe" asp-action="Add" class="btn btn-primary btn-sm">Добави</a>
-                <a type="button" asp-area="" asp-controller="AboutMe" asp-action="Edit" class="btn btn-warning btn-sm">Редактирай</a>
             }
         </div>
         <!-- ============ step 1 =========== -->
-        <div class="row">
-            <div class="col-md-5">
-                <div class="process-box process-left" data-aos="fade-right" data-aos-duration="1000">
-                    <div class="row">
-                        <div class="col-md-5">
-                            <div class="process-step">
-                                <p class="m-0 p-0">Как се казвам?</p>
+        @foreach (var about in Model)
+        {
+            count++;
+            if (count % 2 != 0)
+            {
+                <div class="row">
+                    <div class="col-md-5">
+                        <div class="process-box process-left" data-aos="fade-right" data-aos-duration="1000">
+                            <div class="row">
+                                <div class="col-md-5">
+                                    <div class="process-step">
+                                        <p class="m-0 p-0">@about.Title</p>
+                                    </div>
+                                </div>
+                                <div class="col-md-7">
+                                    <p>@about.Description</p>
+                                    <a type="button" asp-area="" asp-controller="AboutMe" asp-action="Edit" asp-route-id="@about.Id" class="btn btn-warning btn-sm">Редактирай</a>
 
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-md-7">
-                            <h5>What is Lorem Ipsum?</h5>
-                            <p><small>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </small></p>
+                            <div class="process-line-l"></div>
                         </div>
                     </div>
-                    <div class="process-line-l"></div>
-                </div>
-            </div>
-            <div class="col-md-2"></div>
-            <div class="col-md-5">
-                <div class="process-point-right"></div>
-            </div>
-        </div>
-        <!-- ============ step 2 =========== -->
-        <div class="row">
-
-            <div class="col-md-5">
-                <div class="process-point-left"></div>
-            </div>
-            <div class="col-md-2"></div>
-            <div class="col-md-5">
-                <div class="process-box process-right" data-aos="fade-left" data-aos-duration="1000">
-                    <div class="row">
-                        <div class="col-md-5">
-                            <div class="process-step">
-                                <p class="m-0 p-0">На колко години съм?</p>
-                            </div>
-                        </div>
-                        <div class="col-md-7">
-                            <h5>What is Lorem Ipsum?</h5>
-                            <p><small>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </small></p>
-                        </div>
+                    <div class="col-md-2"></div>
+                    <div class="col-md-5">
+                        <div class="process-point-right"></div>
                     </div>
-                    <div class="process-line-r"></div>
-                </div>
-            </div>
+                </div> 
+            }
+                else
+                {
+<div class="row">
 
-        </div>
-        <!-- ============ step 3 =========== -->
-        <div class="row">
-            <div class="col-md-5">
-                <div class="process-box process-left" data-aos="fade-right" data-aos-duration="1000">
-                    <div class="row">
-                        <div class="col-md-5">
-                            <div class="process-step">
-                                <p class="m-0 p-0">От колко време практикувам?</p>
-                            </div>
-                        </div>
-                        <div class="col-md-7">
-                            <h5>What is Lorem Ipsum?</h5>
-                            <p><small>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </small></p>
-                        </div>
+    <div class="col-md-5">
+        <div class="process-point-left"></div>
+    </div>
+    <div class="col-md-2"></div>
+    <div class="col-md-5">
+        <div class="process-box process-right" data-aos="fade-left" data-aos-duration="1000">
+            <div class="row">
+                <div class="col-md-5">
+                    <div class="process-step">
+                        <p class="m-0 p-0">@about.Title</p>
                     </div>
-                    <div class="process-line-l"></div>
+                </div>
+                <div class="col-md-7">
+                    <p>@about.Description</p>
+                    <a type="button" asp-area="" asp-controller="AboutMe" asp-action="Edit" asp-route-id="@about.Id" class="btn btn-warning btn-sm">Редактирай</a>
                 </div>
             </div>
-            <div class="col-md-2"></div>
-            <div class="col-md-5">
-                <div class="process-point-right"></div>
-            </div>
         </div>
-        <!-- ============ step 4 =========== -->
-        <div class="row">
-            <div class="col-md-5">
-                <div class="process-point-left"></div>
-            </div>
-            <div class="col-md-2"></div>
-            <div class="col-md-5">
-                <div class="process-box process-right" data-aos="fade-left" data-aos-duration="1000">
-                    <div class="row">
-                        <div class="col-md-5">
-                            <div class="process-step">
-                                <p class="m-0 p-0">Имам ли сертификати?</p>
-                            </div>
-                        </div>
-                        <div class="col-md-7">
-                            <h5>What is Lorem Ipsum?</h5>
-                            <p><small>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </small></p>
-                        </div>
-                    </div>
-                    <div class="process-line-r"></div>
-                </div>
-            </div>
+    </div>
 
-
-        </div>
-        <!-- ============ step 3 =========== -->
-        <div class="row">
-            <div class="col-md-5">
-                <div class="process-box process-left" data-aos="fade-right" data-aos-duration="1000">
-                    <div class="row">
-                        <div class="col-md-5">
-                            <div class="process-step">
-                                <p class="m-0 p-0">Какво ме мотивира?</p>
-                            </div>
-                        </div>
-                        <div class="col-md-7">
-                            <h5>What is Lorem Ipsum?</h5>
-                            <p><small>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </small></p>
-                        </div>
-                    </div>
-                    <div class="process-line-l"></div>
-                </div>
-            </div>
-            <div class="col-md-2"></div>
-            <div class="col-md-5">
-                <div class="process-point-right process-last"></div>
-            </div>
-        </div>
-        <!-- ============ -->
+</div>}
+}
     </div>
 </section>
 
