--- a/KTaseva.App/Views/Shared/_Layout.cshtml
+++ b/KTaseva.App/Views/Shared/_Layout.cshtml
@@ -10,6 +10,9 @@
     <title>KTaseva.Арт</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+
+    <link rel="stylesheet" href="~/css/contacts.css" />
+
 </head>
 <body>
     <header>
@@ -28,7 +31,7 @@
                             </li>
                         }
                         <li class="nav-item">
-                            <a class="nav-link"  asp-area="" asp-controller="AboutMe" asp-action="Index">За мен</a>
+                            <a class="nav-link" asp-area="" asp-controller="AboutMe" asp-action="Index">За мен</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Photos" asp-action="Index">Галерия</a>
@@ -77,6 +80,12 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>AOS.init();</script>
+
     @RenderSection("Scripts", required: false)
 </body>
 </html>
