--- a/KTaseva.App/Areas/Identity/Pages/Account/Register.cshtml
+++ b/KTaseva.App/Areas/Identity/Pages/Account/Register.cshtml
@@ -39,6 +39,10 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
+            <p>
+                Натискайки бутона "Регистрация", вие потвърждавате, че сте запознати и съгласни с нашата
+                <a asp-area="" asp-controller="Home" asp-action="Privacy">политика за опазване на личните данни</a>
+            </p>
             <button type="submit" class="btn btn-primary">Регистрация</button>
         </form>
     </div>
