--- a/KTaseva.App/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/KTaseva.App/Areas/Identity/Pages/_ViewImports.cshtml
@@ -3,3 +3,4 @@
 @using KTaseva.App.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using KTaseva.Models
+@using KTaseva.ViewModels.ReCaptcha
