--- a/KTaseva.App/Areas/Identity/Pages/Account/Register.cshtml
+++ b/KTaseva.App/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,5 +1,7 @@
 ﻿@page
 @model RegisterModel
+@using Microsoft.Extensions.Options
+@inject IOptions<ReCAPTCHASettings> GooglereCAPTCHA
 @{
     ViewData["Title"] = "Register";
 }
@@ -39,6 +41,7 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
+            <input type="hidden" asp-for="Input.Token" />
             <p>
                 Натискайки бутона "Регистрация", вие потвърждавате, че сте запознати и съгласни с нашата
                 <a asp-area="" asp-controller="Home" asp-action="Privacy">политика за опазване на личните данни</a>
@@ -76,7 +79,6 @@
                 }
             </section>
         </div>*@
-</div>
 </div>
 
 @section Scripts {
