--- a/KTaseva.App/Views/Shared/_Layout.cshtml
+++ b/KTaseva.App/Views/Shared/_Layout.cshtml
@@ -86,6 +86,15 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>AOS.init();</script>
 
+    <script src="https://www.google.com/recaptcha/api.js?render=@GooglereCAPTCHA.Value.ReCAPTCHA_Site_Key"></script>
+    <script>
+    grecaptcha.ready(function () {
+        grecaptcha.execute('@GooglereCAPTCHA.Value.ReCAPTCHA_Site_Key', { action: 'homepage' }).then(function (token) {
+            $('#Input_Token').val(token);
+        });
+    });
+    </script>
+
     @RenderSection("Scripts", required: false)
 </body>
 </html>
