--- a/KTaseva.App/Views/_ViewImports.cshtml
+++ b/KTaseva.App/Views/_ViewImports.cshtml
@@ -6,6 +6,7 @@
 @using KTaseva.ViewModels.Appointments
 @using KTaseva.ViewModels.Procedures
 @using KTaseva.ViewModels.AboutMe
+@using KTaseva.ViewModels.ReCaptcha
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
