--- a/KTaseva.App/Views/Appointments/Add.cshtml
+++ b/KTaseva.App/Views/Appointments/Add.cshtml
@@ -2,59 +2,65 @@
 @using Microsoft.Extensions.Options
 @inject IOptions<ReCAPTCHASettings> GooglereCAPTCHA
 
-<div class="container col-md-4">
-    <h2 class="text-center">Запази час</h2>
-    <form asp-area="" asp-controller="Appointments" asp-action="Add" method="post" class="form-horizontal">
+    <div class="container col-md-4">
+        @if (ViewData["invalid"] != null)
+        {
+            <div class="alert alert-danger" role="alert">
+                @this.ViewData["invalid"]
+            </div>
+        }
+        <h2 class="text-center">Запази час</h2>
+        <form asp-area="" asp-controller="Appointments" asp-action="Add" method="post" class="form-horizontal">
 
-        <div class="form-group">
-            <label for="exampleFormControlSelect1">Процедура</label>
-            <select class="form-control" asp-for="@Model.ProcedureId" asp-items="@Model.Procedures" id="procedureId"></select>
-        </div>
+            <div class="form-group">
+                <label for="exampleFormControlSelect1">Процедура</label>
+                <select class="form-control" asp-for="@Model.ProcedureId" asp-items="@Model.Procedures" id="procedureId"></select>
+            </div>
 
-        <fieldset class="form-group row">
-            <label class="col-sm-10">Имате ли стар лак за махане</label>
-            <div class="col-sm-10">
-                <div class="form-check">
-                    <label class="form-check-label">
-                        <input class="form-check-input" type="radio" asp-for="@Model.OldPolish" name="OldPolish" id="gridRadios1" value="Да" checked>
-                        Да
-                    </label>
+            <fieldset class="form-group row">
+                <label class="col-sm-10">Имате ли стар лак за махане</label>
+                <div class="col-sm-10">
+                    <div class="form-check">
+                        <label class="form-check-label">
+                            <input class="form-check-input" type="radio" asp-for="@Model.OldPolish" name="OldPolish" id="gridRadios1" value="Да" checked>
+                            Да
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <label class="form-check-label">
+                            <input class="form-check-input" type="radio" asp-for="@Model.OldPolish" name="OldPolish" id="gridRadios2" value="Не">
+                            Не
+                        </label>
+                    </div>
                 </div>
-                <div class="form-check">
-                    <label class="form-check-label">
-                        <input class="form-check-input" type="radio" asp-for="@Model.OldPolish" name="OldPolish" id="gridRadios2" value="Не">
-                        Не
-                    </label>
+            </fieldset>
+            <div class="form-group">
+                <label>Избери дата</label>
+                <div id="busyId"></div>
+                <input class="form-control" asp-for="@Model.Date" id="datetimepicker" type="text" />
+            </div>
+            <div class="form-group">
+                <label>Избери час</label>
+                <input class="form-control" asp-for="@Model.Hour" id="timepicker" type="text" />
+                <span class="text-danger" asp-validation-for="@Model.Hour"></span>
+                @if (ViewData["error"] != null)
+                {
+                    <div class="alert alert-danger" role="alert">
+                        @this.ViewData["error"]
+                    </div>
+                }
+            </div>
+            <input type="hidden" asp-for="@Model.Token" id="tokenId" />
+            <hr />
+            <div class="form-group">
+                <div class="text-center">
+                    <input type="submit" value="Запази" class="btn btn-info btn-sm" />
+                    <a asp-controller="Home" asp-action="Index" class="btn btn-danger btn-sm">Назад</a>
                 </div>
             </div>
-        </fieldset>
-        <div class="form-group">
-            <label>Избери дата</label>
-            <div id="busyId"></div>
-            <input class="form-control" asp-for="@Model.Date" id="datetimepicker" type="text" />
-        </div>
-        <div class="form-group">
-            <label>Избери час</label>
-            <input class="form-control" asp-for="@Model.Hour" id="timepicker" type="text" />
-            <span class="text-danger" asp-validation-for="@Model.Hour"></span>
-            @if (ViewData["error"] != null)
-            {
-                <div class="alert alert-danger" role="alert">
-                    @this.ViewData["error"]
-                </div>
-            }
-        </div>
-        <input type="hidden" asp-for="@Model.Token" id="tokenId" />
-        <hr />
-        <div class="form-group">
-            <div class="text-center">
-                <input type="submit" value="Запази" class="btn btn-info btn-sm" />
-                <a asp-controller="Home" asp-action="Index" class="btn btn-danger btn-sm">Назад</a>
-            </div>
-        </div>
-        <input type="hidden" asp-for="@Model.DisabledDates" id="disabledDates" />
-    </form>
-</div>
+            <input type="hidden" asp-for="@Model.DisabledDates" id="disabledDates" />
+        </form>
+    </div>
 
 @*DateTimePicker *@
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
