--- a/KTaseva.App/Views/Home/Index.cshtml
+++ b/KTaseva.App/Views/Home/Index.cshtml
@@ -1,5 +1,11 @@
 ﻿@model IEnumerable<ProcedureViewModel>
 
+@if (ViewData["successfully"] != null)
+{
+    <div class="alert alert-danger" role="alert">
+        @this.ViewData["successfully"]
+    </div>
+}
 <header class="masthead">
     <div class="container h-100">
         <div class="row h-100 align-items-center">
