--- a/KTaseva.App/Views/Home/Index.cshtml
+++ b/KTaseva.App/Views/Home/Index.cshtml
@@ -1,13 +1,16 @@
 ﻿@model IEnumerable<ProcedureViewModel>
 
-@if (ViewData["successfully"] != null)
-{
-    <div class="alert alert-danger" role="alert">
-        @this.ViewData["successfully"]
-    </div>
-}
 <header class="masthead">
     <div class="container h-100">
+        @if (this.TempData["successfully"] != null)
+        {
+            <div class="alert alert-success alert-dismissible fade show" role="alert">
+                <strong>@this.TempData["successfully"]</strong>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        }
         <div class="row h-100 align-items-center">
             <div class="col-12 text-center">
                 <h1 class="font-weight-light" style="text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px black; color: white;">Подари си миг красота, само за теб!</h1>
