Fix bug in AppointmentInputModel get date string

--- a/KTaseva.App/Areas/Admin/Views/Appointments/Index.cshtml
+++ b/KTaseva.App/Areas/Admin/Views/Appointments/Index.cshtml
@@ -28,6 +28,6 @@
     $('#datetimepicker').datetimepicker({
         timepicker: false,
         dayOfWeekStart: 1,
-        format: 'd.m.Y'
+        format: 'd/m/Y'
     });
 </script>
