--- a/KTaseva.App/Views/Appointments/Add.cshtml
+++ b/KTaseva.App/Views/Appointments/Add.cshtml
@@ -37,7 +37,7 @@
             <div class="form-group">
                 <label>Избери дата</label>
                 <div id="busyId"></div>
-                <input class="form-control" asp-for="@Model.Date" id="datetimepicker" type="text" />
+                <input class="form-control" asp-for="@Model.GetData" id="datetimepicker" type="text" />
             </div>
             <div class="form-group">
                 <label>Избери час</label>
