--- a/KTaseva.App/Views/Shared/_Layout.cshtml
+++ b/KTaseva.App/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
                             <a class="nav-link" asp-area="" asp-controller="Contacts" asp-action="Index">Контакти</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Appointments" asp-action="Add">Запази Час</a>
+                            <a class="nav-link" asp-area="" asp-controller="Appointments" asp-action="Index">Запази Час</a>
                         </li>
                     </ul>
 
