--- a/KTaseva.App/Areas/Admin/Views/Appointments/Index.cshtml
+++ b/KTaseva.App/Areas/Admin/Views/Appointments/Index.cshtml
@@ -1,20 +1,21 @@
 ﻿@model AdminDisableDateInputModel
-    <div class="container col-md-4">
-        <h1 class="text-center">Блокирай Дата</h1>
-        <form asp-area="Admin" asp-controller="Appointments" asp-action="Add" method="post" class="form-horizontal">
-            <div class="form-group">
-                <label>Избери дата</label>
-                <div id="busyId"></div>
-                <input class="form-control" asp-for="@Model.DisabledDates" id="datetimepicker" type="text" />
+
+<div class="container col-md-4">
+    <h1 class="text-center">Блокирай Дата</h1>
+    <form asp-area="Admin" asp-controller="Appointments" asp-action="Add" method="post" class="form-horizontal">
+        <div class="form-group">
+            <label>Избери дата</label>
+            <div id="busyId"></div>
+            <input class="form-control" asp-for="@Model.GetData" id="datetimepicker" type="text" />
+        </div>
+        <div class="form-group">
+            <div class="text-center">
+                <input type="submit" value="Запази" class="btn btn-info btn-sm" />
+                <a asp-area="Admin" asp-controller="Home" asp-action="Index" class="btn btn-danger btn-sm">Назад</a>
             </div>
-            <div class="form-group">
-                <div class="text-center">
-                    <input type="submit" value="Запази" class="btn btn-info btn-sm" />
-                    <a asp-area="Admin" asp-controller="Home" asp-action="Index" class="btn btn-danger btn-sm">Назад</a>
-                </div>
-            </div>
-        </form>
-    </div>
+        </div>
+    </form>
+</div>
 
 
 @*DateTimePicker *@
@@ -28,6 +29,6 @@
     $('#datetimepicker').datetimepicker({
         timepicker: false,
         dayOfWeekStart: 1,
-        format: 'd/m/Y'
+        format: 'd.m.Y'
     });
 </script>
