--- a/KTaseva.App/Views/AboutMe/Add.cshtml
+++ b/KTaseva.App/Views/AboutMe/Add.cshtml
@@ -6,10 +6,12 @@
         <div class="form-group">
             <label>Заглавие</label>
             <input type="text" class="form-control" asp-for="@Model.Title">
+            <span class="text-danger" asp-validation-for="@Model.Title"></span>
         </div>
         <div class="form-group">
             <label>Описание</label>
             <textarea class="form-control" asp-for="@Model.Description" rows="3"></textarea>
+            <span class="text-danger" asp-validation-for="@Model.Description"></span>
         </div>
         <div class="form-group">
             <div class="text-center">
