--- a/KTaseva.App/Views/Shared/Components/AddPhoto/Default.cshtml
+++ b/KTaseva.App/Views/Shared/Components/AddPhoto/Default.cshtml
@@ -5,8 +5,10 @@
         <div class="col-lg-6 mx-auto">
             <form enctype="multipart/form-data" asp-controller="Photos" asp-action="Add" method="post" class="form-horizontal">
                 <!-- Upload image input-->
+                <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="input-group mb-3 px-2 py-2 rounded-pill bg-white shadow-sm">
                     <input id="upload" type="file" asp-for="@Model.Photo" onchange="readURL(this);" class="form-control border-0">
+                    <span class="text-danger" asp-validation-for="@Model.Photo"></span>
                     <label id="upload-label" for="upload" class="font-weight-light text-muted">Choose file</label>
                     <div class="input-group-append">
                         <label for="upload" class="btn btn-light m-0 rounded-pill px-4"> <i class="fa fa-cloud-upload mr-2 text-muted"></i><small class="text-uppercase font-weight-bold text-muted">Choose file</small></label>
@@ -25,5 +27,9 @@
         </div>
     </div>
 </div>
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
 
 <script src="~/js/photo.js"></script>
