--- a/KTaseva.App/Views/Shared/_Layout.cshtml
+++ b/KTaseva.App/Views/Shared/_Layout.cshtml
@@ -13,6 +13,19 @@
 
     <link rel="stylesheet" href="~/css/contacts.css" />
 
+    <environment include="Production">
+        <!-- Hotjar Tracking Code for http://ktaseva.azurewebsites.net/ -->
+        <script>
+            (function (h, o, t, j, a, r) {
+                h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
+                h._hjSettings = { hjid: 1782865, hjsv: 6 };
+                a = o.getElementsByTagName('head')[0];
+                r = o.createElement('script'); r.async = 1;
+                r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+                a.appendChild(r);
+            })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+        </script>
+    </environment>
 </head>
 <body>
     <header>
@@ -26,9 +39,9 @@
                     <ul class="navbar-nav ml-auto">
                         @if (this.User.IsInRole("Administrator"))
                         {
-                            <li class="nav-item">
-                                <a class="nav-link text-danger" asp-area="Admin" asp-controller="Home" asp-action="Index">Админ</a>
-                            </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-danger" asp-area="Admin" asp-controller="Home" asp-action="Index">Админ</a>
+                        </li>
                         }
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="AboutMe" asp-action="Index">За мен</a>
@@ -91,5 +104,7 @@
     @section Scripts {
         <partial name="_ValidationScriptsPartial" />
     }
+
+
 </body>
 </html>
