--- a/KTaseva.App/Areas/Identity/Pages/Account/Register.cshtml
+++ b/KTaseva.App/Areas/Identity/Pages/Account/Register.cshtml
@@ -11,6 +11,7 @@
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <h4 class="text-center">Регистрация</h4>
             <hr />
+            <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Input.Email">Имейл адрес</label>
                 <input asp-for="Input.Email" class="form-control" />
